--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!-- Note: I Modified some default "cyborg theme" default styles in the style.css file to my liking -->
 <!DOCTYPE html>
 <html lang="en-US">
-<<head>
+<head>
 	<meta name=“viewport” content=“width=device-width, initial-scale=1”> 
 	<meta charset="utf-8">
 	<title>Bootstrap-Portfolio_JM_Contact Page</title>
@@ -10,7 +10,6 @@
 https://bootswatch.com/cyborg/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<body>
 <body>
 <!-- Header, Brand and Navigation Row -->
 <nav class="navbar navbar-default navbar-static-top">
