--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ https://bootswatch.com/cyborg/bootstrap.min.css">
                         <!-- Added secondary image that appears when hovering over "jmPic" -->
             				    
                         <figure class="figure">
-                        <img id="jmPic" src="assets/images/JMandAnnamae.jpg" alt="an image of JM with white and gray kitten" onmouseover="this.src='assets/images/elijah.jpg'" alt="an image of JM riding a horse" onmouseout="this.src='assets/images/JMandAnnamae.jpg'" alt="an image of JM with white and gray kitten" class="img-responsive img-thumbnail"/>
+                        <img id="jmPic" src="assets/images/JMandAnnamae.jpg" alt="an image of JM with white and gray kitten" onmouseover="this.src='assets/images/elijah.jpg'" alt="an image of JM riding a horse" onmouseout="this.src='assets/images/JMandAnnamae.jpg'" alt="an image of JM with white and gray kitten" class="img-thumbnail"/>
                         <figcaption class="figure-caption text-center"><em>Hover over me!</em></figcaption>
                         </figure>
             				    
