--- a/portfolio.html
+++ b/portfolio.html
@@ -50,24 +50,29 @@ https://bootswatch.com/cyborg/bootstrap.min.css">
 				</div>
 
 				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/Timmy1.png" alt="Photo of little, white dog with whiskers" class="img-responsive img-thumbnail">
+					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/Timmy1.png" alt="Photo of little, white dog with whiskers" class="img-fluid img-thumbnail">
 					<h3 class="banner">RPG Game</h3></a>
 				</div>
 
 				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/pancho.jpg" alt="Photo of cat yawning" class="img-responsive img-thumbnail"/>
+					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/pancho.jpg" alt="Photo of cat yawning" class="img-fluid img-thumbnail"/>
 					<h3 class="banner">Trivia Game</h3></a>
 				</div>
 
 				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/puppies.jpg" alt="Photo of two puppies chasing each other" class="img-thumbnail"/>
+					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/puppies.jpg" alt="Photo of two puppies chasing each other" class="img-fluid img-thumbnail"/>
 					<h3 class="banner">Rutgers Widget</h3></a>
 				</div>
 
 				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/Leah.jpg" alt="Photo of calico cat in tree" class="img-thumbnail">
+					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/Leah.jpg" alt="Photo of calico cat in tree" class="img-fluid img-thumbnail">
 					<h3 class="banner">Rock Paper Scissors</h3></a>
-				</div>		
+				</div>
+					<div class="box">
+					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/tallulah.jpg" alt="Photo of calico cat in tree" class="img-fluid img-thumbnail">
+					<h3 class="banner">Weather</h3></a>
+				</div>
+
 			</div>
 		</div>
 	</div>	
