--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!-- Contact Page -->
+<!-- Portfolio Page -->
 <!-- Note: I Modified some default "cyborg theme" default styles in the style.css file to my liking -->
 
 <!DOCTYPE html>
