--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@ https://bootswatch.com/cyborg/bootstrap.min.css">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<footer class="text-center">© Copyright 2017 Jeanmarie Martinko</footer>
+					<footer class="text-center">&copy;Copyright 2017 Jeanmarie Martinko</footer>
 				</div>
 			</div>
 		</div>
