--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!-- Note: I Modified some default "cyborg theme" default styles in the style.css file to my liking -->
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
+<<head>
 	<meta name=“viewport” content=“width=device-width, initial-scale=1”> 
 	<meta charset="utf-8">
 	<title>Bootstrap-Portfolio_JM_Contact Page</title>
@@ -83,9 +83,9 @@ https://bootswatch.com/cyborg/bootstrap.min.css">
 
     					</div>
 
-    				<div class"form-group">
+    				<div class="form-group">
     								
-    					<div class="col-md-3">
+    					<div class="col-md-2">
     								<button type="submit" class="btn btn-default">Submit</button>
     					</div>
     				</div>
@@ -118,7 +118,7 @@ https://bootswatch.com/cyborg/bootstrap.min.css">
 	<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<footer class="text-center">© Copyright 2017 Jeanmarie Martinko</footer>
+					<footer class="text-center">&copy;Copyright 2017 Jeanmarie Martinko</footer>
 				</div>
 			</div>
 		</div>
