--- a/portfolio.html
+++ b/portfolio.html
@@ -1,120 +1,100 @@
-<!-- Portfolio Page -->
-<!-- Note: I Modified some default "cyborg theme" default styles in the style.css file to my liking -->
-
 <!DOCTYPE html>
-<html lang="en-US">
-
-<head>
-	<meta name=“viewport” content=“width=device-width, initial-scale=1”> 
+<html lang="eng-US">
+<head>	
+	<meta name=“viewport” content=“width=device-width, initial-scale=1”>
 	<meta charset="utf-8">
-	<title>Bootstrap-Portfolio_JM_Portfolio Page</title>
-	<!-- Use below for alternate stylesheets, if desired: -->
-	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" type="text/css" href="
-https://bootswatch.com/cyborg/bootstrap.min.css">
+	<title>JM Portfolio Page</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	
 </head>
 
 <body>
-<!-- Header, Brand and Navigation Row -->
-<nav class="navbar navbar-default navbar-static-top">
-    <div class="container">
-      <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">Jeanmarie Martinko</a>
-      </div>
 
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-</nav>
-	
+<!-- header with nav bar Name -->
+	<div id="headBox">
 
-	<!--This is the "main" section on the "portfolio" page on the left> --><!-- Contains both the (i) portfolio "menu" of items; and (ii) the sidebar with the social icons/aside -->
+		<header>
 
-<div class="container">
-     <div class="col-md-8">
-        <div class="panel">
-          		<div class="panel-heading">
-          			<h1 class="panel-title">Portfolio</h1>
-              	</div>
-            		<div class="panel-body">
-				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/Pippi2.jpg" alt="Photo of a cat sitting on computer keyboard" class="img-responsive img-thumbnail">
-					<h3 class="banner">Hangman</h3></a>
-				</div>
+			<a href="index.html"><h1 id="jmNamebox">Jeanmarie Martinko</h1></a>
+			<nav id="navBar">
+				<a class="nav" href="index.html">About &nbsp|</a>
+				<a class="nav" href="portfolio.html">Portfolio &nbsp|</a>
+				<a class="nav" href="contact.html">Contact</a> 
+			</nav>
 
-				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/Timmy1.png" alt="Photo of little, white dog with whiskers" class="img-fluid img-thumbnail">
-					<h3 class="banner">RPG Game</h3></a>
-				</div>
+		</header>
 
-				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/pancho.jpg" alt="Photo of cat yawning" class="img-fluid img-thumbnail"/>
-					<h3 class="banner">Trivia Game</h3></a>
-				</div>
-
-				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/puppies.jpg" alt="Photo of two puppies chasing each other" class="img-fluid img-thumbnail"/>
-					<h3 class="banner">Rutgers Widget</h3></a>
-				</div>
-
-				<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/Leah.jpg" alt="Photo of calico cat in tree" class="img-fluid img-thumbnail">
-					<h3 class="banner">Rock Paper Scissors</h3></a>
-				</div>
-					<div class="box">
-					<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img class="box" src="assets/images/tallulah.jpg" alt="Photo of calico cat in tree" class="img-fluid img-thumbnail">
-					<h3 class="banner">Weather</h3></a>
-				</div>
-
-			</div>
-		</div>
-	</div>	
-			<div class="col-md-4">
-        		<div class="panel">
-          			<div class="panel-heading">
-            			<p class="panel-title text-center" id="sidePanel">Connect with Me</p>
-          			</div>
-          			<div class="panel-body">
-        
-	            		<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img id="logos" src="assets/images/github.png" class="img-responsive img-thumbnail" alt="Image of the logo for Github"/></a>
-
-	      				<a id="linkIn" href="https://www.linkedin.com/in/jeanmarie-martinko-3505ba" target="_blank"><img id="logos" src="
-	      				assets/images/social-linkedin-square2.png" class="img-responsive img-thumbnail" alt="Image of the logo for LinkedIn"/></a>
-
-	      				<a id="stackOflow" href="http://stackexchange.com/users/10158258/dynamical" target="_blank"><img id="logos" src="assets/images/stackoverflow_rounded.png" class="img-responsive img-thumbnail" alt="Image of the logo for Stackoverflow"/></a>
-          			</div>
-        		</div>
-    		</div>
-    	</div>
-   	</div>
-		
-
-	<div class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<footer class="text-center">&copy;Copyright 2017 Jeanmarie Martinko</footer>
-				</div>
-			</div>
-		</div>
 	</div>
 
 
-	<!-- <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script> -->
+	<!--This is the "main" section on the "portfolio" page on the left> --><!-- Contains both the (i) portfolio "menu" of items; and (ii) the sidebar with the social icons/aside -->
 
-	<!-- jQuery, javascript file for the Bootstrap's javascript file to function -->
- <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<div id="container">
 
-  <!-- Bootstrap's javascript file that allows the dropdown menu to work  -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<div class="main-box">
+			
+			<br>
 
+			<div id="secBox">
+				<h1>Portfolio</h1>
+				<hr>
+			</div>
+
+				<div class="box">
+					<img class="box" src="assets/images/Pippi2.jpg" alt="Photo of a cat sitting on computer keyboard">
+					<h2 class="banner">Hangman</h2>
+				</div>
+
+				<div class="box">
+					<img class="box" src="assets/images/Timmy1.png" alt="Photo of little, white dog with whiskers">
+					<h2 class="banner">RPG Game</h2>
+				</div>
+
+				<div class="box">
+					<img class="box" src="assets/images/pancho.jpg" alt="Photo of cat yawning">
+					<h2 class="banner">Trivia Game</h2>
+				</div>
+
+				<div class="box">
+					<img class="box" src="assets/images/puppies.jpg" alt="Photo of two puppies chasing each other">
+					<h2 class="banner">Rutgers Widget</h2>
+				</div>
+
+				<div class="box">
+					<img class="box" src="assets/images/Leah.jpg" alt="Photo of calico cat in tree">
+					<h2 class="banner">Rock Paper Scissors</h2>
+				</div>
+
+			</div>
+		
+			<!-- Connect with Me -->
+		<aside id="connectBox">
+
+			<br>
+
+			<h2>Connect with Me</h2>
+
+			<br>
+
+			<hr>
+
+			<br>
+
+			<a id="gitH" href="https://github.com/DynamicalPerspectives" target="_blank"><img id="logos" src="assets/images/github2.png"/></a>
+
+			<a id="linkIn" href="https://www.linkedin.com/in/jeanmarie-martinko-3505ba" target="_blank"><img id="logos" src="
+			assets/images/social-linkedin-square2.png"/></a>
+
+			<a id="stackOflow" href="http://stackexchange.com/users/10158258/dynamical" target="_blank"><img id="logos" src="assets/images/stackoverflow.png"/></a>
+
+		</aside>
+
+	</div>
+
+	<footer id="footBox">&copy;Copyright 2017 Jeanmarie Martinko</footer>
+
+</div>
 
 </body>
 
